added file format options to frequency file generator

--- a/ankimorphs/ui/frequency_file_generator.ui
+++ b/ankimorphs/ui/frequency_file_generator.ui
@@ -7,8 +7,26 @@
     <x>0</x>
     <y>0</y>
     <width>459</width>
-    <height>357</height>
+    <height>450</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>450</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>450</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Frequency File Generator</string>
@@ -41,12 +59,19 @@
            </property>
           </widget>
          </item>
+         <item alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>File formats:</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QLineEdit" name="inputFileLiineEdit"/>
+          <widget class="QLineEdit" name="inputDirLineEdit"/>
          </item>
          <item>
           <widget class="QLineEdit" name="outputFileLineEdit"/>
@@ -60,6 +85,44 @@
             </size>
            </property>
           </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QCheckBox" name="txtFilesCheckBox">
+             <property name="text">
+              <string>.txt</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="srtFilesCheckBox">
+             <property name="text">
+              <string>.srt</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="vttFilesCheckBox">
+             <property name="text">
+              <string>.vtt</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
@@ -108,6 +171,13 @@
         <number>10</number>
        </property>
        <item>
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Parsing:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="squareBracketsCheckBox">
          <property name="text">
           <string>Ignore content in square brackets []</string>
@@ -151,23 +221,7 @@
        </item>
       </layout>
      </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout_7"/>
-     </item>
-     <item alignment="Qt::AlignHCenter">
+     <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
       <widget class="QPushButton" name="createFrequencyFileButton">
        <property name="styleSheet">
         <string notr="true">margin-top: 10px;
