added .md to frequency file generator

--- a/ankimorphs/ui/frequency_file_generator.ui
+++ b/ankimorphs/ui/frequency_file_generator.ui
@@ -110,6 +110,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="mdFilesCheckBox">
+             <property name="text">
+              <string>.md</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer name="horizontalSpacer_2">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
