added morph priority to note filters (#59)

--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>793</width>
+    <width>925</width>
     <height>408</height>
    </rect>
   </property>
@@ -22,7 +22,7 @@
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>5</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="note_filters_tab">
         <attribute name="title">
@@ -51,6 +51,11 @@
              <column>
               <property name="text">
                <string>Morphemizer</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>Morph Priority</string>
               </property>
              </column>
              <column>
@@ -449,62 +454,6 @@
                 </size>
                </property>
               </spacer>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QVBoxLayout" name="verticalLayout_14">
-             <property name="topMargin">
-              <number>10</number>
-             </property>
-             <item>
-              <widget class="QLabel" name="label_5">
-               <property name="text">
-                <string>Prioritize morphs based on:</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QRadioButton" name="recalc_prioritize_collection_input">
-               <property name="text">
-                <string>Frequency in card collection</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_14">
-             <item alignment="Qt::AlignLeft">
-              <widget class="QRadioButton" name="recalc_prioritize_frequency_input">
-               <property name="enabled">
-                <bool>true</bool>
-               </property>
-               <property name="text">
-                <string>Frequency in file</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QComboBox" name="frequency_selector">
-               <property name="enabled">
-                <bool>true</bool>
-               </property>
-               <property name="minimumSize">
-                <size>
-                 <width>150</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="currentText">
-                <string>Frequency file not found</string>
-               </property>
-               <item>
-                <property name="text">
-                 <string>Frequency file not found</string>
-                </property>
-               </item>
-              </widget>
              </item>
             </layout>
            </item>
