--- a/ankimorphs/ui/tag_selection.ui
+++ b/ankimorphs/ui/tag_selection.ui
@@ -45,9 +45,9 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="saveButton">
+        <widget class="QPushButton" name="applyButton">
          <property name="text">
-          <string>Save</string>
+          <string> Apply</string>
          </property>
         </widget>
        </item>
