--- a/ankimorphs/ui/tag_selection.ui
+++ b/ankimorphs/ui/tag_selection.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>593</width>
+    <height>451</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,12 +15,45 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="searchLayout">
+     <property name="bottomMargin">
+      <number>12</number>
+     </property>
      <item>
-      <widget class="QListView" name="listView"/>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Search:</string>
+       </property>
+      </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
+      <widget class="QLineEdit" name="searchLineEdit"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QTableWidget" name="tableWidget">
+       <column>
+        <property name="text">
+         <string>Exclude</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Include</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Tag</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="buttonLayout">
        <item>
         <widget class="QPushButton" name="unselectAllButton">
          <property name="styleSheet">
@@ -33,6 +66,33 @@
        </item>
        <item>
         <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="viewAllTagsPushButton">
+         <property name="text">
+          <string>View All Tags</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="viewSelectedTagsPushButton">
+         <property name="text">
+          <string>View Selected Tags</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
