added 'unknowns count' extra field option (#92)

--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -145,6 +145,11 @@
              </column>
              <column>
               <property name="text">
+               <string>Unknowns Count</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
                <string>Highlighted</string>
               </property>
              </column>
