--- a/ankimorphs/ui/readability_report_generator.ui
+++ b/ankimorphs/ui/readability_report_generator.ui
@@ -1,68 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FrequencyFileGeneratorDialog</class>
- <widget class="QDialog" name="FrequencyFileGeneratorDialog">
+ <class>ReadabilityReportGeneratorDialog</class>
+ <widget class="QDialog" name="ReadabilityReportGeneratorDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>459</width>
-    <height>450</height>
+    <width>673</width>
+    <height>568</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>0</width>
-    <height>450</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>16777215</width>
-    <height>450</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Frequency File Generator</string>
+   <string>Readability Report Generator</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_4">
+  <layout class="QVBoxLayout" name="verticalLayout_5">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_3">
+    <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <widget class="QPushButton" name="inputButton">
+          <widget class="QPushButton" name="inputPushButton">
            <property name="text">
-            <string>Select input</string>
+            <string>Select Input</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="outputButton">
-           <property name="text">
-            <string>Select output</string>
-           </property>
-          </widget>
-         </item>
-         <item alignment="Qt::AlignHCenter">
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Morphemizer:</string>
+            <string>Morphemizer</string>
            </property>
           </widget>
          </item>
-         <item alignment="Qt::AlignHCenter">
-          <widget class="QLabel" name="label_3">
+         <item>
+          <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>File formats:</string>
+            <string>File formats</string>
            </property>
           </widget>
          </item>
@@ -74,26 +49,10 @@
           <widget class="QLineEdit" name="inputDirLineEdit"/>
          </item>
          <item>
-          <widget class="QLineEdit" name="outputFileLineEdit"/>
+          <widget class="QComboBox" name="comboBox"/>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <layout class="QHBoxLayout" name="horizontalLayout">
            <item>
             <widget class="QCheckBox" name="txtFilesCheckBox">
              <property name="text">
@@ -123,7 +82,7 @@
             </widget>
            </item>
            <item>
-            <spacer name="horizontalSpacer_2">
+            <spacer name="horizontalSpacer">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -139,52 +98,42 @@
          </item>
         </layout>
        </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <property name="topMargin">
-        <number>10</number>
-       </property>
        <item>
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Minimum occurrence:</string>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <property name="topMargin">
+          <number>0</number>
          </property>
-        </widget>
-       </item>
-       <item alignment="Qt::AlignLeft">
-        <widget class="QSpinBox" name="minOccurrenceSpinBox">
-         <property name="minimum">
-          <number>1</number>
+         <property name="bottomMargin">
+          <number>0</number>
          </property>
-         <property name="maximum">
-          <number>1000</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
+         <item alignment="Qt::AlignTop">
+          <widget class="QPushButton" name="generateReportPushButton">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>57</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Generate
+Report</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_5">
+      <layout class="QVBoxLayout" name="verticalLayout_3">
        <property name="topMargin">
         <number>10</number>
        </property>
+       <property name="bottomMargin">
+        <number>10</number>
+       </property>
        <item>
-        <widget class="QLabel" name="label_4">
+        <widget class="QLabel" name="label_3">
          <property name="text">
           <string>Parsing:</string>
          </property>
@@ -234,16 +183,83 @@
        </item>
       </layout>
      </item>
-     <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-      <widget class="QPushButton" name="createFrequencyFileButton">
-       <property name="styleSheet">
-        <string notr="true">margin-top: 10px;
-margin-bottom: 10px;
-padding: 5px;</string>
+     <item>
+      <widget class="QTabWidget" name="tabWidget">
+       <property name="currentIndex">
+        <number>0</number>
        </property>
-       <property name="text">
-        <string>Create Frequency File</string>
-       </property>
+       <widget class="QWidget" name="tab">
+        <attribute name="title">
+         <string>Absolute Numbers</string>
+        </attribute>
+        <layout class="QVBoxLayout" name="verticalLayout_6">
+         <item>
+          <widget class="QTableWidget" name="absoluteTableWidget">
+           <column>
+            <property name="text">
+             <string>File</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Total Morphs</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Known</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Learning</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Unknown</string>
+            </property>
+           </column>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_2">
+        <attribute name="title">
+         <string>Percentages</string>
+        </attribute>
+        <layout class="QVBoxLayout" name="verticalLayout_7">
+         <item>
+          <widget class="QTableWidget" name="percentTableWidget">
+           <column>
+            <property name="text">
+             <string>File</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Total Morphs</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Known</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Learning</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Unknown</string>
+            </property>
+           </column>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </widget>
      </item>
     </layout>
